--- a/ps2_JiwonByun.html
+++ b/ps2_JiwonByun.html
@@ -2090,10 +2090,10 @@ library(ggplot2)</code></pre>
 <p>Highest number: 7 Lowest number: 1</p>
 </div>
 <div id="cleaning-up-a-bit" class="section level1">
-<h1>cleaning up a bit</h1>
+<h1>Cleaning up a bit</h1>
 <p>First, we’ll get rid of rows and columns of the data that we don’t need.</p>
 <div id="filter-out-excluded-rows" class="section level2">
-<h2>filter out excluded rows</h2>
+<h2>Filter out excluded rows</h2>
 <p>First, we need to <code>filter</code> out any rows that should be excluded. According to the report, there are two exclusions:</p>
 <blockquote>
 <blockquote>
@@ -2480,7 +2480,7 @@ library(ggplot2)</code></pre>
 <p>It’s good practice to assign a new variable name (in this case <code>filtered_d</code>) to a data frame when you change it in an important way, or apply a code chunk that shouldn’t be run twice. This helps prevent you seeing different results when you run your code in chunks (and might run one multiple times, or skip it, etc.) vs. knit the document.</p>
 </div>
 <div id="get-rid-of-unnecessary-columns" class="section level2">
-<h2>get rid of unnecessary columns</h2>
+<h2>Get rid of unnecessary columns</h2>
 <p>The dataset contains a bunch of columns we don’t care about:</p>
 <ul>
 <li>The dataset contains three subject columns, which are identical except for a single NA which is not mentioned in the protocol, and so is likely an error.</li>
